2006-11-25  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/CompositeView.java (modelToView): Never return
	null.

2006-11-25  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/html/TableView.java (calculateColumnRequirements):
	Check whether rowView instanceof RowView.
	(updateGrid): Likewise.

2006-11-25  Mario Torre  <neugens@nirvana.limasoftware.net>

	PR28462
	* java/text/DecimalFormat.java: Almost new rewrite, and update to 1.5.
	* java/text/NumberFormat.java (format): all format methods, fixed
	FieldPosition argument should never be null.
	(format(Object, StringBuffer, FieldPosition)): fixed signature,
	method is not final.
	* java/text/DecimalFormatSymbols.java (clone): fixed to also clone
	locale.
	* AUTHORS: added my name to the file.

2006-11-25  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/html/StyleSheet.java (paint): Guard against
	getChildAllocation() returning null.

2006-11-25  Mark Wielaard  <mark@klomp.org>

	* gnu/javax/swing/text/html/css/Selector.java (calculateSpecificity):
	Use clazzIndex for id substring.

2006-11-25  Mark Wielaard  <mark@klomp.org>

	* java/awt/EventQueue.java (pop): Only terminate dispatchThread when
	it is still running.

2006-11-25  Mark Wielaard  <mark@klomp.org>

	Fixes bug #28822
	* doc/api/Makefile.am (create_html): Guard GJDOC invocation with
	CREATE_API_DOCS

2006-11-24  Tania Bento  <tbento@redhat.com>

	* java/awt/font/TextHitInfo.java
	(equals(TextHitInfo)): If TextHitInfo parameter is null, return false.
	(beforeOffset): Decreased first parameter by 1.

2006-11-24  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/BufferedImageGraphics.java
	(constructor): Check sample model when setting fastCM flag.
	(updateBufferedImage): Check scanline and sample model offsets before
	copying data directly into the image data buffer.

2006-11-24  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/java2d/QuadSegment.java
	(offsetSubdivided): Handle special straight-line cases.
